--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 # Gemini API Key (provided by user)
 GEMINI_API_KEY=AIzaSyDOpGqS4IXWfUVB_4O3V7f3PgX8NW_flkw
 API_KEY=AIzaSyDOpGqS4IXWfUVB_4O3V7f3PgX8NW_flkw
+
+# Backend API URL - Update this after deploying backend
+VITE_API_URL=http://localhost:8000
