--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: brain-tumor-api
     runtime: python
-    buildCommand: pip install -r requirements.minimal.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.minimal.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.10.0
