--- a/backend/requirements.minimal.txt
+++ b/backend/requirements.minimal.txt
@@ -1,8 +1,8 @@
 fastapi==0.115.6
-uvicorn==0.34.0
+uvicorn[standard]==0.34.0
 python-multipart==0.0.20
 pillow==12.1.0
-torch==2.9.1
-torchvision==0.24.1
-numpy==2.1.3
+torch==2.2.0
+torchvision==0.17.0
+numpy==1.26.4
 python-dotenv==1.0.1
