--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-torch==1.13.1
-torchvision==0.14.1
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 python-multipart==0.0.20
 pillow==12.1.0
-numpy==1.24.3
+torch
+torchvision
+numpy
 python-dotenv==1.0.1
