--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: brain-tumor-api
     runtime: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt && python download_model.py
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt && echo 'Downloading model...' && python download_model.py && echo 'Model download completed'
+    startCommand: bash -c 'sleep 10 && echo "Starting API after model download" && uvicorn main:app --host 0.0.0.0 --port $PORT'
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
