--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ GEMINI_API_KEY=AIzaSyDOpGqS4IXWfUVB_4O3V7f3PgX8NW_flkw
 API_KEY=AIzaSyDOpGqS4IXWfUVB_4O3V7f3PgX8NW_flkw
 
 # Backend API URL - Update this after deploying backend
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=https://brain-tumor-detection-using-vit-model.onrender.com
