--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.4.0",
     "@google/genai": "^1.35.0",
+    "@types/react": "^19.2.8",
     "@types/react-router-dom": "^5.3.3",
-    "framer-motion": "11.0.8",
+    "framer-motion": "^10.18.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "lucide-react": "0.344.0",
@@ -21,7 +23,7 @@
     "three": "0.162.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.19.5",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
