Fix API URL configuration and update deployment guide for proper frontend-backend connection

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-# Backend API URL
+# Gemini API Key (provided by user)
+GEMINI_API_KEY=your_google_gemini_api_key_here
+
+API_KEY=your_google_gemini_api_key_here
+
+# Backend API URL for development
 VITE_API_URL=http://localhost:8000
 
-# For production, update to your deployed backend URL:
-# VITE_API_URL=https://your-backend.onrender.com
+# For production deployment:
+# 1. First deploy the backend to Render
+# 2. Get your Render backend URL (e.g., https://your-app-name.onrender.com)
+# 3. Update VITE_API_URL with your actual backend URL:
+# VITE_API_URL=https://your-app-name.onrender.com
