--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@
 GEMINI_API_KEY=AIzaSyDOpGqS4IXWfUVB_4O3V7f3PgX8NW_flkw
 API_KEY=AIzaSyDOpGqS4IXWfUVB_4O3V7f3PgX8NW_flkw
 
-# Backend API URL - Update this after deploying backend
-VITE_API_URL=https://brain-tumor-detection-using-vit-model.onrender.com
+# Backend API URL - Update this with your actual deployed backend URL
+# Example: VITE_API_URL=https://your-render-app-name.onrender.com
+VITE_API_URL=
