--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ API_KEY=AIzaSyDOpGqS4IXWfUVB_4O3V7f3PgX8NW_flkw
 
 # Backend API URL - Update this with your actual deployed backend URL
 # Example: VITE_API_URL=https://your-render-app-name.onrender.com
-VITE_API_URL=
+VITE_API_URL=http://localhost:8000
