--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@emotion/is-prop-valid": "^1.4.0",
     "@google/genai": "^1.35.0",
-    "@types/react": "^19.2.8",
+    "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
+    "@types/leaflet": "^1.9.21",
+    "@types/react": "^18.2.0",
+    "@types/react-leaflet": "^2.8.3",
     "@types/react-router-dom": "^5.3.3",
-    "framer-motion": "^10.18.0",
+    "@types/three": "^0.162.0",
+    "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
-    "lucide-react": "0.344.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.344.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "recharts": "2.12.0",
-    "three": "0.162.0"
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "^22.19.5",
